--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Conheça o candidato a vereador Pedro Varanda! Vote 20700!"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="/images/png/eleicoes/link-img.png" />
+    <link rel="icon" href="/images/png/eleicoes/president.png">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -29,7 +30,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+CL:wght@100..400&family=Playwrite+US+Modern:wght@100..400&family=Whisper&display=swap" rel="stylesheet">
     
-    <title>Artisan Coffee</title>
+    <title>Pedro Varanda</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
